Update AHShop.java